<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/puntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="65"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            />

        <TextView
            android:id="@+id/auxpuntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/aux_puntos"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3" />
    </LinearLayout>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/aux_titulo_positivo"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/aux_descripcion_positivo"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/otravez"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_reintentar"
            app:cornerRadius="50dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finalizar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_finalizar"
            app:cornerRadius="50dp" />


    </LinearLayout>

</LinearLayout>